--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,6 +21,7 @@ button {
 .link {
     text-decoration: none;
     list-style-type: none;
+
 }
 
 .link .navigation-item {
@@ -45,11 +46,31 @@ button {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current-link {
     color: var(--secondary-color);
+    position: relative;
+
 }
+
+.current-link::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 44px;
+    bottom: 0;
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--secondary-color);
+    border-radius: 2px;
+
+
+}
+
+
 
 
 .navigation-item:hover,
@@ -65,6 +86,7 @@ button {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .info:hover,
@@ -90,6 +112,7 @@ button {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .phone:hover,
@@ -144,8 +167,13 @@ button {
     padding: 10px 32px 10px 32px;
 }
 
-.button:hover {
+.button:hover,
+.button:focus {
     color: #188CE8;
+}
+
+.button:active {
+    color: var(--text-white);
 }
 
 .primary-color {
@@ -217,6 +245,7 @@ button {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .info-footer:hover,
@@ -230,6 +259,7 @@ button {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .phone-footer:hover,
@@ -255,18 +285,15 @@ button {
     cursor: pointer;
     border-radius: 4px;
     border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.button-filter:hover {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-}
-
 
 .button-filter:hover,
 .button-filter:focus {
     background-color: var(--secondary-color);
     color: var(--text-white);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .project {
@@ -492,14 +519,10 @@ button {
 
 .icon-social-team>.icon-social>svg {
     fill: var(--icon);
-
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-social-team>.icon-social:hover,
-.icon-social-team>.icon-social:focus {
-    background-color: var(--secondary-color);
 
-}
 
 .icon-social:hover svg {
     fill: var(--text-white);
@@ -514,7 +537,15 @@ button {
     background-color: var(--text-white);
     border-radius: 50px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.icon-social-team>.icon-social:hover,
+.icon-social-team>.icon-social:focus {
+    background-color: var(--secondary-color);
+
+}
+
 
 /*flex regular customers*/
 .section-customers {
@@ -545,6 +576,7 @@ button {
     width: 170px;
     height: 81px;
     cursor: pointer;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -554,9 +586,10 @@ button {
 
 .section-customers>.icons-customers>li>a>svg {
     fill: var(--icon);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.section-customers>.icons-customers>li>a:hover svg {
+.section-customers>.icons-customers>li:hover svg {
     fill: var(--secondary-color);
 }
 
@@ -605,6 +638,7 @@ button {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50px;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icons-socials>.icon-social-footer:hover,
@@ -643,11 +677,12 @@ button {
     background-color: var(--bg-card);
     border: 1px solid #EEEEEE;
     margin-bottom: 30px;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-section>li:hover,
 .portfolio-section>li:focus {
-    border: 1px solid #EEEEEE;
+
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -667,4 +702,88 @@ button {
     justify-content: flex-start;
     padding: 0px 24px 20px 24px;
     margin: 0;
+}
+
+.card-container {
+    position: relative;
+}
+
+.card-animation {
+    position: absolute;
+    top: 0;
+    width: 370px;
+    height: 294px;
+    background-color: rgba(33, 150, 243, 0.9);
+    padding: 63px 24px;
+    transform: translateY(105%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-container:hover .card-animation {
+    transform: translateY(0%);
+}
+
+.animation-card-hidden {
+    position: relative;
+    overflow: hidden;
+    height: 294px;
+}
+
+.card-animation>p {
+    padding: 0;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    color: var(--text-white);
+}
+
+
+
+/*modal*/
+
+.backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    left: 0px;
+    top: 0px;
+    background-color: rgba(0, 0, 0, 0.2);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 528px;
+    height: 581px;
+    background-color: var(--bg-card);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal>button {
+    position: absolute;
+    left: 490px;
+    top: 8px;
+    right: 8pX;
+    width: 30px;
+    height: 30px;
+    padding: 0;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+
+}
+
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 }
